<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogs_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/change_photo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_photo"
        android:textColor="#000"
        android:layout_marginStart="15dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/choose_photo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/contact_view_ripple_effect"
        android:textColor="#000"
        android:text="@string/choose_photo"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/remove_photo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000"
        android:text="@string/remove_photo"
        android:padding="12dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/contact_view_ripple_effect"/>

    <TextView
        android:id="@+id/change_photo_cancel_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/add_photo_dialog_cancel_button_ripple_effect"
        android:textColor="#1c92f2"
        android:textSize="14sp"
        android:text="@string/cancel"
        android:layout_gravity="right" />
</LinearLayout>