<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.garikalaverdyan.contacts.ui.activity.AddAndEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addAndEdit_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#CC7575"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:titleTextAppearance="@style/ToolbarTextAppearance.Title"
        app:subtitleTextAppearance="@style/ToolbarTextAppearance.Subtitle"
        style="@style/MyToolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"/>

    <View
        android:id="@+id/person_view"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameID"
        app:layout_constraintBottom_toBottomOf="@id/nameID"/>

    <EditText
        android:id="@+id/nameID"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/enter_name"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toEndOf="@id/person_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addAndEdit_activity_toolbar"/>

    <EditText
        android:id="@+id/surnameID"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/enter_surname"
        android:textColor="@color/primary_text"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/nameID"
        app:layout_constraintStart_toStartOf="@id/nameID"
        app:layout_constraintEnd_toEndOf="@id/nameID"/>

    <View
        android:id="@+id/phone_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_phone"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="@id/phoneID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/phoneID"/>

    <EditText
        android:id="@+id/phoneID"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number"
        android:inputType="numberSigned"
        android:textColor="@color/primary_text"
        android:textStyle="italic"
        tools:ignore="TextFields"
        app:layout_constraintTop_toBottomOf="@id/surnameID"
        app:layout_constraintStart_toStartOf="@id/surnameID"
        app:layout_constraintEnd_toEndOf="@id/surnameID"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/gender"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/gender_spinner"
        app:layout_constraintEnd_toStartOf="@id/gender_spinner"
        app:layout_constraintTop_toBottomOf="@id/phoneID" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneID" />

    <TextView
        android:id="@+id/data_picker_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_picker"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/gender_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ic_calendar_view"/>

    <View
        android:id="@+id/ic_calendar_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:background="@drawable/ic_perm_contact_calendar"
        android:text="@string/open"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_picker_text_view"/>

    <Button
        android:id="@+id/button_calendar_view"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:background="#CC7575"
        android:text="@string/open"
        app:layout_constraintStart_toEndOf="@id/ic_calendar_view"
        app:layout_constraintTop_toTopOf="@id/ic_calendar_view"
        app:layout_constraintBottom_toBottomOf="@id/ic_calendar_view"/>

    <TextView
        android:id="@+id/calendar_view_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:layout_marginStart="40dp"
        android:padding="9dp"
        android:hint="@string/_00"
        android:textSize="20sp"
        android:inputType="numberSigned"
        android:digits="0123456789."
        android:maxLength="2"
        android:freezesText="true"
        app:layout_constraintStart_toEndOf="@id/button_calendar_view"
        app:layout_constraintTop_toTopOf="@id/button_calendar_view"
        app:layout_constraintBottom_toBottomOf="@id/button_calendar_view"/>

    <TextView
        android:id="@+id/calendar_view_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:layout_marginStart="20dp"
        android:padding="9dp"
        android:hint="@string/_00"
        android:textSize="20sp"
        android:digits="0123456789."
        android:inputType="numberSigned"
        android:freezesText="true"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@id/calendar_view_day"
        app:layout_constraintTop_toTopOf="@id/calendar_view_day"
        app:layout_constraintBottom_toBottomOf="@id/calendar_view_day"/>

    <TextView
        android:id="@+id/calendar_view_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:layout_marginStart="20dp"
        android:padding="9dp"
        android:hint="@string/_0000"
        android:textSize="20sp"
        android:digits="0123456789."
        android:inputType="numberSigned"
        android:freezesText="true"
        android:maxLength="4"
        app:layout_constraintStart_toEndOf="@id/calendar_view_month"
        app:layout_constraintTop_toTopOf="@id/calendar_view_month"
        app:layout_constraintBottom_toBottomOf="@id/calendar_view_month"/>
</androidx.constraintlayout.widget.ConstraintLayout>